# sort_css_declarations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test2.css
src/sort_css/: sort_css.py
src/sort_css.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/sort_css_declarations/: sort_css_declarations.py
src/sort_css_heloint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: expected_output_vars.py  sort_css_declarations_test.py  sort_css_test.py
test/test_data/: test_css.css  test_css_v2.css  test_html.html  test_incomplete_html.html
