[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sort_css"
version = "0.0.3"
authors = [{name="Dániel Májer", email="majerdaniel93@gmail.com"}]
description = "Tool for sorting CSS file declarations."
readme = "README.md"
classifiers =[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage"= "https://github.com/heloint/sort_css"
"Bug Tracker" = "https://github.com/heloint/sort_css/issues"
