[metadata]
name = sort_css
version = 0.0.3
description = Tool for sorting CSS file declarations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heloint/sort_css
author = Dániel Májer
author_email = majerdaniel93@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir=
    =src
packages=find:

install_requires =
    beautifulsoup4>=4.11.1
    bs4>=0.0.1
    cssutils>=2.6.0
    soupsieve>=2.3.2

python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sort-css = sort_css.sort_css:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
